privacy file and css added

--- a/courses.html
+++ b/courses.html
@@ -10,11 +10,11 @@
     
 </head>
 <body>
-    <!-- top banner -->
+<!-- top banner -->
     <div class="top-banner">
       <div class="container">
         <div class="small-bold-text banner-text">
-          📣 All CSE Notes And Previous year question papers Availiable →
+          📣 All Computer Science and Enginnering Notes and Question Papers Availiable →
         </div>
       </div>
     </div>
@@ -28,12 +28,12 @@
 
         <div class="company-links" id="company-links">
           <ul class="flex">
-            <li><a href="index.html" class="hover-links">Home</a></li>
-            <li><a href="#" class="hover-links">Library</a></li>
-            <li><a href="index.html#resources" class="hover-links">Resources</a></li>
-            <li><a href="index.html#reviews" class="hover-links">Reviews</a></li>
-            <li><a href="/login" class="hover-links secondary-btn">Sign in</a></li>
-            <li><a href="/signup" action="/" method="post" class="hover-links primary-btn res-btn">Sign up</a></li>
+            <li><a href="#" class="hover-links">Home</a></li>
+            <li><a href="libarary/libarary.html" class="hover-links">Library</a></li>
+            <li><a href="#resources" class="hover-links">Resources</a></li>
+            <li><a href="#reviews" class="hover-links secondary-btn">Reviews</a></li>
+            <!-- <li><a href="login.php" class="hover-links secondary-btn">Sign in</a></li> -->
+            <li><a href="https://forms.gle/RWy7gwDHYL4ZUcJW7"  class="hover-links small-bold-text primary-btn res-btn">Send Your Notes</a></li>
           </ul>
         </div>
         <a href="#" class="nav-toggle hover-links" id="nav-toggle">
@@ -41,6 +41,7 @@
         </a>
       </div>
     </nav>
+
 
 <section id="course">
     <h2 class="section-heading">Free cources</h2>
